--- a/package.json
+++ b/package.json
@@ -1,10 +1,14 @@
 {
   "name": "plurales",
-  "version": "1.2.0",
+  "version": "1.3.0",
   "description": "Convierte sustantivos en español a plural",
   "main": "index.js",
   "scripts": {
     "test": "jest --coverage"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/thehackermonkey/plurales.git"
   },
   "keywords": [],
   "author": "hans@thehackermonkey.com",
